--- a/src/app/Component/admin-dase/admin-dase.component.css
+++ b/src/app/Component/admin-dase/admin-dase.component.css
@@ -9,22 +9,12 @@ nav a{
     width: 100%;
 }
 
-html,
+/* html,
 body,
 .intro {
   height: 100%;
 }
 
-.gradient-custom-1 {
-  /* fallback for old browsers */
-  background: #cd9cf2;
-
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to top, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1));
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to top, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1))
-}
 
 table td,
 table th {
@@ -35,4 +25,54 @@ table th {
 tbody td {
   font-weight: 500;
   color: #999999;
+} */
+.data-info{
+    margin-top: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.data-info .box{
+    background-color: #123;
+    height: 150px;
+    flex-grow: 1;
+    max-width: calc(50% - 20px); 
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px;
+}
+.data-info .box:hover{
+    background-color: rgba(17, 34, 51, 0.663);
+}
+.data-info .box i {
+    font-size: 30px;
+}
+.data-info .box .data
+{
+    text-align: center;
+
+}
+.data-info .box .data span
+{
+ font-size: 25px;
+}
+#title{
+    background-color: rgba(17, 34, 51, 0.458);
+    margin: auto;
+    color: aliceblue;
+    display: inline-block;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .data-info .box {
+        max-width: calc(100% - 20px); /* Adjust the maximum width for smaller screens */
+        margin-bottom: 15px; /* Add some spacing between the boxes */
+    }
 }
