--- a/src/app/Component/admin-dase/admin-dase.component.css
+++ b/src/app/Component/admin-dase/admin-dase.component.css
@@ -9,6 +9,12 @@ nav a{
     width: 100%;
 }
 
+.intro .introbtn{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    
+}
 /* html,
 body,
 .intro {
