--- a/src/app/Component/admin-dase/admin-dase.component.html
+++ b/src/app/Component/admin-dase/admin-dase.component.html
@@ -96,6 +96,7 @@
         
         
          <section class="intro mt-5">
+          <button (click)="AddedNews()" class="introbtn" style="background-color: #123; color: aliceblue;padding: 5px 10px;border-radius: 5px; "> <i class="fa-regular fa-newspaper"></i> Added News</button>
             <div class="gradient-custom-1 h-100">
               <div class="mask d-flex align-items-center h-100">
                 <div class="container">
