--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -42,7 +42,7 @@
                     <p>settings</p>
                 </a>
             </li>
-            <li class="log-out">
+            <li class="log-out" (click)="logout()">
                 <a href="#">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <p>logout</p>
