--- a/src/app/Component/news-update/news-update.component.html
+++ b/src/app/Component/news-update/news-update.component.html
@@ -1,3 +1,4 @@
+
 <section class="intro mt-5">
     <div class="gradient-custom-1 h-100">
       <div class="mask d-flex align-items-center h-100">
@@ -24,14 +25,18 @@
                       <td><input type="text" value="{{newData?.description}}" #description></td>
                       <td><input type="text" value="{{newData?.newsContent}}" #newsContent></td>
                       <td> 
+                         <div class="d-flex">
                         <i (click)="update(title.value , description.value,newsContent.value)" class="fa-solid fa-pen-to-square pe-2" style="font-size: 15px; color: burlywood; cursor: pointer;">Save</i>
+                         </div>
                     </td>
                     </tr>
                   </tbody>
                   <span *ngIf="isEmpty" style="color: red;">all fileds are required</span>
                 </table>
               </div>
+              
             </div>
+            <button (click)="home()" class="btn mt-3" style="max-width: 150px; background-color: #123; color: aliceblue; "> Home</button>
           </div>
         </div>
       </div>
