--- a/src/app/Component/sidebar/sidebar.component.html
+++ b/src/app/Component/sidebar/sidebar.component.html
@@ -7,37 +7,37 @@
                 <h2>YuTech</h2>
             </li>
             <li>
-                <a href="#" class="active">
+                <a (click)="home()" class="active">
                     <i class="fas fa-home"></i>
                     <p>Dashboard</p>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a (click)="home()">
                     <i class="fa-regular fa-newspaper"></i>
                     <p>News</p>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a  (click)="authorPage()">
                     <i class="fa-solid fa-user-tie"></i>
                     <p>Authors</p>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a  (click)="home()">
                     <i class="fa-solid fa-chart-simple"></i>
                     <p>Charts</p>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a  (click)="home()">
                     <i class="fa-regular fa-address-card"></i>
                     <p>post</p>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a  (click)="home()">
                     <i class="fa-solid fa-gears"></i>
                     <p>settings</p>
                 </a>
