--- a/src/app/Component/addednews/addednews.component.html
+++ b/src/app/Component/addednews/addednews.component.html
@@ -77,7 +77,7 @@
         
         <div class="col mt-3 mb-3">
             <div class="form-group">
-                <input type="text" class="form-control" id="imageUrl" placeholder="Image " formControlName="imageUrl" required>
+                <input type="file" class="form-control" id="imageUrl" formControlName="imageUrl" accept="image/*" required>
             </div>
             <div *ngIf="title?.touched && title?.invalid" class="text-danger">
                 <span *ngIf="imageUrl?.errors?.['pattern']">الأسم يجب أن يكون 8 حروف على الأقل ولا يحتوي على أرقام</span>
